discussion/kv_engine/153934/153934_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-39745: Move KVBucket::accessLog to Warmup

The member is only accessed during Warmup so it should live there.

The ItemPager test change is required as the test now uses less
memory and creates fewer items as a result.

Change-Id: I7f2d3bd3c9da5027ec1b6f32ac1cb44c2f5ddf1b

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2021-05-19 14:53:36.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-05-19 15:00:53.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/9021/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/mcbp/protocol/status.h:277:45: error: expected function body after function declarator [clang-diagnostic-error]
const std::error_category& error_category() NOEXCEPT;
                                            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/mcbp/protocol/status.h:282:33: error: use of undeclared identifier "error_category"; did you mean "std::error_category"? [clang-diagnostic-error]
        : system_error(int(ev), error_category(), what_arg) {
                                ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/system_error:89:9: note: "std::error_category" declared here
  class error_category
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/mcbp/protocol/status.h:286:33: error: use of undeclared identifier "error_category"; did you mean "std::error_category"? [clang-diagnostic-error]
        : system_error(int(ev), error_category(), what_arg) {
                                ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/system_error:89:9: note: "std::error_category" declared here
  class error_category
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/mcbp/protocol/status.h:291:41: error: use of undeclared identifier "error_category"; did you mean "std::error_category"? [clang-diagnostic-error]
    return std::error_condition(int(e), error_category());
                                        ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/system_error:89:9: note: "std::error_category" declared here
  class error_category
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/memcached/engine_error.h:139:52: error: expected function body after function declarator [clang-diagnostic-error]
const std::error_category& engine_error_category() NOEXCEPT;
                                                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/memcached/engine_error.h:144:33: error: use of undeclared identifier "engine_error_category" [clang-diagnostic-error]
        : system_error(int(ev), engine_error_category(), what_arg) {}
                                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/memcached/engine_error.h:147:33: error: use of undeclared identifier "engine_error_category" [clang-diagnostic-error]
        : system_error(int(ev), engine_error_category(), what_arg) {}
                                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/memcached/engine_error.h:151:41: error: use of undeclared identifier "engine_error_category" [clang-diagnostic-error]
    return std::error_condition(int(e), engine_error_category());
                                        ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/9021/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/mcbp/protocol/status.h:277:45:
error: expected function body after function declarator [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/9021/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/35886/ : FAILURE

Compile error at C:\Jenkins\workspace\kv_engine-windows-master\kv_engine\include\mcbp/protocol/status.h(277): error C3646: "NOEXCEPT": unknown override specifier ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/35886/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/30674/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/include/mcbp/protocol/status.h:277:45:
error: expected function body after function declarator
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/30674/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/18527/ : FAILURE

Compile error at [2021-05-19T14:57:20.401Z] ../kv_engine/include/mcbp/protocol/status.h:277:45:
error: expected function body after function declarator
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/18527/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/10575/ : FAILURE

Compile error at [2021-05-19T14:55:41.948Z] ../kv_engine/include/mcbp/protocol/status.h:277:45:
error: expected initializer before ?NOEXCEPT?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/10575/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/10975/ : FAILURE

Compile error at [2021-05-19T14:56:24.297Z] ../kv_engine/include/mcbp/protocol/status.h:277:45:
error: expected function body after function declarator
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/10975/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/9644/ : FAILURE

Compile error at [2021-05-19T14:55:34.363Z] ../kv_engine/include/mcbp/protocol/status.h:277:45:
error: expected function body after function declarator
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/9644/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/10715/ : FAILURE

Compile error at [2021-05-19T14:55:48.961Z] ../kv_engine/include/mcbp/protocol/status.h:277:45:
error: expected initializer before ?NOEXCEPT?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/10715/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/7574/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
